--- a/.github/workflows/handler-pr-close.yml
+++ b/.github/workflows/handler-pr-close.yml
@@ -22,17 +22,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          repository: ${{ github.event.client_payload.pull_request.head.repo.full_name }}
-          ref: ${{ github.event.client_payload.pull_request.head.sha }}
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.event.pull_request.head.sha }}
           token: ${{ secrets.GITHUB_TOKEN }}
           persist-credentials: false
     # Set the source of module
       - name: Set Terraform Module Source
         working-directory: ${{ env.WORK_DIR_PATH }}
         env:
-          LOGIN: ${{ github.event.client_payload.pull_request.head.repo.owner.login }}
-          NAME: ${{ github.event.client_payload.pull_request.head.repo.name }}
-          SHA: ${{ github.event.client_payload.pull_request.head.sha }}
+          LOGIN: ${{ github.event.pull_request.head.repo.owner.login }}
+          NAME: ${{ github.event.pull_request.head.repo.name }}
+          SHA: ${{ github.event.pull_request.head.sha }}
         run: |
           sed --in-place "s/source = \"..\/..\"/source = \"github.com\/$LOGIN\/$NAME?ref=$SHA\"/" main.tf
           sed --in-place "s/source = \"..\/..\/fixtures\/test_proxy\"/source = \"github.com\/$LOGIN\/$NAME\/\/fixtures\/test_proxy?ref=$SHA\"/" main.tf
@@ -54,7 +54,7 @@ jobs:
           cat <<EOF > backend-config.hcl
             organization = "$TFC_ORGANIZATION"
             workspaces {
-              name = "google-private-tcp-active-active-${{ github.event.client_payload.github.payload.issue.number }}"
+              name = "google-private-tcp-active-active-${{ github.event.pull_request.number }}"
             }
           EOF
     # Initialize terraform
@@ -98,9 +98,9 @@ jobs:
         id: get-workspaces-google-private-tcp-active-active
         working-directory: ${{ env.WORK_DIR_PATH }}
         run: >-
-          echo "::set-output name=WORSPACE_TCP_AA::$(terraform workspace list -input=false -no-color | grep google-private-tcp-active-active-${{ github.event.client_payload.github.payload.issue.number }})"
+          echo "::set-output name=WORSPACE_TCP_AA::$(terraform workspace list -input=false -no-color | grep google-private-tcp-active-active-${{ github.event.pull_request.number }})"
 
-          echo "::set-output name=WORSPACE_TCP_AA_EXISTS::$(terraform workspace list -input=false -no-color | grep -cx google-private-tcp-active-active-${{ github.event.client_payload.github.payload.issue.number }})"
+          echo "::set-output name=WORSPACE_TCP_AA_EXISTS::$(terraform workspace list -input=false -no-color | grep -cx google-private-tcp-active-active-${{ github.event.pull_request.number }})"
     # this step will delete resources if workspace exists for this PR
       - name: Terraform Destroy
         id: destroy
