--- a/.github/workflows/handler-test.yml
+++ b/.github/workflows/handler-test.yml
@@ -825,21 +825,17 @@ jobs:
         env:
           TFC_ORGANIZATION: ${{ secrets.TFC_ORGANIZATION }}
         run: |
-          cat <<EOF > backend.tf
-            terraform {
-              backend "remote" {
-                organization = "$TFC_ORGANIZATION"
-                  workspaces {
-                    name = "google-standalone-external-rhel8-worker-${{ github.event.client_payload.github.payload.issue.number }}"
-                             }
-                             }
-                             }
+          cat <<EOF > backend-config.hcl
+            organization = "$TFC_ORGANIZATION"
+            workspaces {
+              name = "google-standalone-external-rhel8-worker-${{ github.event.client_payload.github.payload.issue.number }}"
+            }
           EOF
 
       - name: Terraform Init
         id: init
         working-directory: ${{ env.WORK_DIR_PATH }}
-        run: terraform init -input=false -no-color
+        run: terraform init -backend-config=backend-config.hcl -input=false -no-color
       
       - name: Write Terraform Variables
         working-directory: ${{ env.WORK_DIR_PATH }}
@@ -982,21 +978,17 @@ jobs:
         env:
           TFC_ORGANIZATION: ${{ secrets.TFC_ORGANIZATION }}
         run: |
-          cat <<EOF > backend.tf
-            terraform {
-              backend "remote" {
-                organization = "$TFC_ORGANIZATION"
-                  workspaces {
+          cat <<EOF > backend-config.hcl
+            organization = "$TFC_ORGANIZATION"
+            workspaces {
               name = "google-standalone-mounted-disk-${{ github.event.client_payload.github.payload.issue.number }}"
-                             }
-                             }
-                             }
+            }
           EOF
 
       - name: Terraform Init
         id: init
         working-directory: ${{ env.WORK_DIR_PATH }}
-        run: terraform init -input=false -no-color
+        run: terraform init -backend-config=backend-config.hcl -input=false -no-color
       
       - name: Write Terraform Variables
         working-directory: ${{ env.WORK_DIR_PATH }}
