initialised null so that it will pickup output from datablock

--- a/.github/workflows/handler-test.yml
+++ b/.github/workflows/handler-test.yml
@@ -854,6 +854,7 @@ jobs:
           google_credentials     = <<-EOC
             $GOOGLE_CREDENTIALS
             EOC
+          tfe_license_secret_id  = null
           google_project         = "$GOOGLE_PROJECT"
           google_region          = "$GOOGLE_REGION"
           google_zone            = "$GOOGLE_ZONE"
@@ -1007,6 +1008,7 @@ jobs:
           google_credentials     = <<-EOC
             $GOOGLE_CREDENTIALS
             EOC
+          tfe_license_secret_id  = null
           google_project         = "$GOOGLE_PROJECT"
           google_region          = "$GOOGLE_REGION"
           google_zone            = "$GOOGLE_ZONE"
