--- a/.github/workflows/handler-test.yml
+++ b/.github/workflows/handler-test.yml
@@ -851,10 +851,10 @@ jobs:
           TFE_WORKSPACE: ${{ secrets.TFE_WORKSPACE }}
         run: |
           cat <<EOF > github.auto.tfvars
+          license_file = ""
           google_credentials     = <<-EOC
             $GOOGLE_CREDENTIALS
             EOC
-          tfe_license_secret_id  = null
           google_project         = "$GOOGLE_PROJECT"
           google_region          = "$GOOGLE_REGION"
           google_zone            = "$GOOGLE_ZONE"
@@ -1005,10 +1005,10 @@ jobs:
           TFE_WORKSPACE: ${{ secrets.TFE_WORKSPACE }}
         run: |
           cat <<EOF > github.auto.tfvars
+          license_file = ""
           google_credentials     = <<-EOC
             $GOOGLE_CREDENTIALS
             EOC
-          tfe_license_secret_id  = null
           google_project         = "$GOOGLE_PROJECT"
           google_region          = "$GOOGLE_REGION"
           google_zone            = "$GOOGLE_ZONE"
